# churn-ml-system

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
src/churn_prediction/: __init__.py  artifacts.py  config.py  logging_config.py  pipeline.py  tracking.py
src/churn_prediction/data/: __init__.py  loader.py  schema.py
src/churn_prediction/evaluation/: __init__.py  metrics.py
src/churn_prediction/features/: __init__.py  transformer.py
src/churn_prediction/training/: __init__.py  trainer.py
tests/: __init__.py  test_data.py  test_features.py  test_training.py
